# polytof

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/paper/transform/: 0101.npy  0102.npy  0103.npy  0104.npy  0105.npy  0106.npy  0108.npy  0111.npy  0112.npy  0114.npy  0115.npy  0117.npy  0119.npy  0120.npy  0121.npy  0122.npy  0123.npy  0124.npy  0128.npy  0134.npy  0135.npy  0136.npy  0137.npy  0138.npy  0139.npy  0140.npy  0141.npy  0144.npy  0145.npy  0146.npy  0147.npy  0148.npy  0149.npy  0150.npy  0151.npy  0152.npy  0153.npy  0154.npy  0155.npy  0156.npy  (+43 more)
data/paper/waring/: 0101-00013.npy  (+87 more)
data/tensors/: 0101.npy  0102.npy  0103.npy  0104.npy  0105.npy  0106.npy  0108.npy  0111.npy  0112.npy  0114.npy  0115.npy  0117.npy  0119.npy  0120.npy  0121.npy  0122.npy  0123.npy  0124.npy  0125.npy  0126.npy  0127.npy  0128.npy  0129.npy  0130.npy  0131.npy  0132.npy  0133.npy  0134.npy  0135.npy  0136.npy  0137.npy  0138.npy  0139.npy  0140.npy  0141.npy  0142.npy  0143.npy  0144.npy  0145.npy  0146.npy  (+600 more)
docs/: cli.md  scripts.md  tensors.md
examples/: README.ipynb
scripts/: gf2.py  make_cpd_gf.py  make_rnd_bench.py  make_tensors_gfmult.py  setup_circuits_atq.py  setup_circuits_todd.py  verify_paper_schemes.py
src/: bco.cpp  compile.cpp  cpd.cpp  prototype.cpp  waring.cpp
src/circuit/: circuit.h  h_opt.h  parser_qc.h  pauli.h  phase_poly.h  t_merge.h  tableau.h
src/core/: bit_arr.h  bit_vec.h  paths.h  random.h  types.h
src/cpd/: config.h  gauss.h  logger.h  pool.h  quadratic.h  walk.h
src/waring/: bco8.h  ctc.h  prototype.h  tensor.h  todd.h
(+106 files in other folders)
